[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/menu_btn.wav" type="AudioStream" id=1]
[ext_resource path="res://assets/green_circle_button.png" type="Texture" id=2]
[ext_resource path="res://Game.tres" type="Theme" id=3]
[ext_resource path="res://assets/SupermercadoOne-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://BackBtn.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 4 )

[node name="BackBtn" type="Control"]
margin_right = 48.0
margin_bottom = 48.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackBtnAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[node name="BackBtn" type="TextureButton" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 98.0
margin_bottom = 98.0
rect_scale = Vector2( 0.4, 0.4 )
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Label" parent="."]
margin_left = -7.0
margin_top = -4.0
margin_right = 56.0
margin_bottom = 56.0
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 1 )
text = "<"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="finished" from="BackBtnAudio" to="." method="_on_BackBtnAudio_finished"]
[connection signal="pressed" from="BackBtn" to="." method="_on_BackBtn_pressed"]
